# 95-cli

./: .gitignore  95  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  INSTALL.md  README.md  SECURITY.md  go.mod  go.sum  install.sh  main.go
.github/workflows/: release.yml
client/: auth.go  stages.go
cmd/: helper.go  init.go  login.go  logout.go  root.go  run.go  run_test_common.go  test.go
internal/config/: config.go
internal/runner/: cli_runner.go  http_errors.go  http_runner.go  runner.go  server_runner.go  server_runner_unix.go  server_runner_windows.go  setup.go
src/: api.rs  main.rs  output.rs  ui.rs  zip_util.rs
ui/: renderer.go
ui/messages/: messages.go
