[package]
name = "ninefive-cli"
version = "0.1.3"
edition = "2021"
description = "CLI tool for ninefive code challenge platform - submit solutions without manual zipping"
license = "MIT"
repository = "https://github.com/chibuka/95-cli.git"
homepage = "https://95ninefive.dev"
keywords = ["cli", "code-challenge", "coding", "ninefive"]
categories = ["command-line-utilities"]
authors = ["Marouane Boufarouj <boufaroujmarouan@gmail.com>"]

[[bin]]
name = "95"
path = "src/main.rs"

[[bin]]
name = "95-dev"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "multipart", "json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
colored = "2.1"
indicatif = "0.17"
walkdir = "2.5"
anyhow = "1.0"
base64 = "0.22"
dialoguer = "0.11"
console = "0.15"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
